# multi-agent-chatbot

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/plans/: backend-refactor.md  project-cleanup.md
assets/: .env.example  .evn  .gitignore  README.md  SUPABASE_INTEGRATION.md  development.md  docker-compose-models.yml  docker-compose.yml
assets/backend/: .env.example  API_DOCS.md  CLAUDE.md  CODE_REVIEW.md  RAG_ANALYSIS.md  agent.py  auth.py  enhanced_rag.py  errors.py  langfuse_client.py  main.py  models.py  pyproject.toml  utils.py  vector_store.py
assets/backend/agent/: __init__.py  core.py  formatting.py  graph.py  observability.py  streaming.py
assets/backend/dependencies/: __init__.py  providers.py
assets/backend/docs/: LANGFUSE_INTEGRATION.md
assets/backend/infrastructure/: __init__.py  cache.py  embedding_client.py  llm_client.py  milvus_client.py
assets/backend/openai_compatible/: __init__.py  models.py  router.py
assets/backend/rag/: __init__.py  bm25.py  fusion.py  hyde.py  pipeline.py  reranker.py
assets/backend/routers/: __init__.py  api_v1.py  chat_stream.py  health.py
assets/backend/services/: __init__.py  chat_service.py  health_service.py  ingest_service.py  knowledge_service.py  rag_service.py  vector_store_service.py
assets/backend/tools/mcp_servers/: image_understanding.py  rag.py
assets/frontend/: .dockerignore  .gitignore  CLAUDE.md  CodeGuideline.md  Dockerfile  README.md  eslint.config.mjs  index.html  (+7 more)
plans/: CLAUDE.md  PROJECT_ANALYSIS.md  SKILLS_CONFIG_GUIDE.md  refactor_preparation_guide.md
(+80 files in other folders)
